# ipfs-private-network

./: README.md
basic-p2p/: Cargo.toml  README.md
basic-p2p/src/: main.rs
create-keypair/: Cargo.toml  README.md
create-keypair/src/: main.rs
discovery-Identify-kademlia/: Cargo.toml
discovery-identify-kademlia/: Cargo.toml  README.md
discovery-identify-kademlia/src/: main.rs
kubernetes-setup/: 10_ipfs-node-b-pv.yml  11_ipfs-node-b-pvc.yml  12_ipfs-node-b-pod.yml  14_libp2p-pod.yml  1_namespace.yml  2_ipfs-node-a-pv.yml  4_ipfs-node-a-pod.yml  4_ipfs-node-a-pv.yml  5_ipfs-node-a-pvc.yml  6_data-node-b-pv.yml  6_ipfs-node-a-pod.yml  6_ipfs-node-b-pv.yml  8_ipfs-node-b-pod.yml  9_data-node-b-pvc.yml  9_ipfs-node-b-service.yml  README.md  swarm.key  x2_data-node-a-pv.yml  x3_data-node-a-pvc.yml  x5_ipfs-node-a-service.yml
kubernetes-setup/libp2p-private-network/: 2_node-a-pod.yml  4_node-c-pod.yml  5_node-d-pod.yml  6_new-node-pod.yml  6_node-d-service.yml  README.md  discovery-identify-kademlia-dockerfile.dev  dockerfile-relay-server.dev  node-a-dockerfile.dev  node-b-dockerfile.dev  node-c-dockerfile.dev  node-d-dockerfile.dev
libp2p-node/: Cargo.toml
libp2p-node/src/: main.rs
node/: Cargo.toml  README.md
node/src/: main.rs
peer-discovery-identify-kademlia/: Cargo.toml  README.md
peer-discovery-identify-kademlia/src/: main.rs
peer-identity/: Cargo.toml  README.md
peer-identity/src/: main.rs
