[package]
name = "libp2p-node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3.28"
libp2p = { version = "0.51.2", features = [
    "async-std",
    "autonat",
    "dcutr",
    "deflate",
    "dns",
    "ecdsa",
    "floodsub",
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "metrics",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "quic",
    "macros",
    "relay",
    "rendezvous",
    "request-response",
    "rsa",
    "secp256k1",
    "serde",
    "tcp",
    "tls",
    "tokio",
    "uds",
    "wasm-bindgen",
    "wasm-ext",
    "wasm-ext-websocket",
    "webrtc",
    "websocket",
    "yamux"
]}
