[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-timer = "3.0.2"
futures = "0.3.28"
async-std = { version = "1.12.0" , features = ["attributes"]}
libp2p = { version = "0.51.2", features = [
    "async-std",
    "identify",
    "kad",
    "noise",
    "macros",
    "tcp",
    "tls",
    "tokio",
    "yamux",
]}
